applications/tekton/tekton-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tekton-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    acme.kubernetes.io/debug: "true"
    acme.kubernetes.io/dns: dns_aws
    acme.kubernetes.io/enable: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - hosts:
      - tekton.k3s.convalesco.org
      secretName: tekton-ssl-certificate
  rules:
  - host: tekton.k3s.convalesco.org
    http:
      paths:
      - path: /
        backend:
          serviceName: tekton-dashboard
          servicePort: http
